zkay/examples/type_errors/Addition.sol
pragma solidity ^0.5.0;

contract Addition {

	uint@all x;

	function f(uint@me a, uint@all b) {
		x = a+b;
	}
}
